Updated image pruner and postinstal

--- a/deploy/tasks/main.yaml
+++ b/deploy/tasks/main.yaml
@@ -29,4 +29,12 @@
     - argocd_apps
   when: cluster_argocd_day2 | bool
 
+# Configure PostInstall Tasks
+- name: Include Tasks for PostInstall
+  include_tasks: postinstall.yaml
+  tags:
+    - day2
+    - postinstall
+  #when: cluster_argocd_day2 | bool
+
 
