updated self heal sync policy

--- a/manifests/bootstrap/lab/argocd-app-customcerts-lab.yaml
+++ b/manifests/bootstrap/lab/argocd-app-customcerts-lab.yaml
@@ -12,4 +12,6 @@ spec:
     repoURL: 'https://github.com/hornjason/argocd-lab.git'
     targetRevision: master
   project: default
-  syncPolicy: {}
+  syncPolicy:
+    automated:
+      selfHeal: true
